@@ -1,3 +1,8 @@
+2012-04-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/53003
+	* g++.dg/parse/crash59.C: New.
+
 2012-04-16  Jason Merrill  <jason@redhat.com>
 
 	PR c++/38543
